apps/backend/deployments/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: followemail
  labels:
    name: followemail
